--- a/src/assets/styles/hero.css
+++ b/src/assets/styles/hero.css
@@ -29,7 +29,7 @@
   gap: 0.75rem;
 }
 
-.hero__CTA__portraits{
+.hero__CTA__portraits {
   display: flex;
 }
 
@@ -77,12 +77,16 @@
   line-height: 120%;
   text-align: center;
   color: var(--shade-◼️-dark-1000);
-  -webkit-text-stroke: 0.75px var(--📦-common-★-primary-medium);
+  text-shadow: -1px 0 var(--📦-common-★-primary-medium),
+    0 1px var(--📦-common-★-primary-medium),
+    1px 0 var(--📦-common-★-primary-medium),
+    0 -1px var(--📦-common-★-primary-medium);
 }
 
 .hero__title--accent {
   color: var(--📦-common-★-primary-medium);
-  -webkit-text-stroke: 0.75px var(--shade-◼️-dark-1000);
+  text-shadow: -1px 0 var(--shade-◼️-dark-1000), 0 1px var(--shade-◼️-dark-1000),
+    1px 0 var(--shade-◼️-dark-1000), 0 -1px var(--shade-◼️-dark-1000);
 }
 
 .hero__text {
